# rust-windows-spotify-widget

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
installer/: setup.iss
src/: app.rs  config.rs  hotkey.rs  icon.rs  main.rs  tray.rs
src/spotify/: api.rs  auth.rs  mod.rs  models.rs  token_store.rs
src/ui/: mod.rs  style.rs  widget.rs
