[package]
name = "rust-windows-spotify-widget"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "=0.28.1"
egui = "=0.28.1"
global-hotkey = "0.8.0"
oauth2 = "5.0.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tray-icon = "0.24.1"
