[package]
name = "rust-windows-spotify-widget"
version = "0.2.0"
edition = "2024"
default-run = "rust-windows-spotify-widget"
build = "build.rs"

[dependencies]
directories = "6.0.0"
dotenvy = "0.15.7"
eframe = "=0.28.1"
egui = "=0.28.1"
global-hotkey = "0.8.0"
ico = "0.5.0"
image = "0.25.10"
oauth2 = "5.0.0"
reqwest = { version = "0.13.4", features = ["json"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
single-instance = "0.3.3"
tiny_http = "0.12.0"
tokio = { version = "1.52.3", features = ["full"] }
tray-icon = "0.24.1"
url = "2.5.8"
webbrowser = "1.2.1"

[build-dependencies]
winresource = "0.1.31"
